<resources>
    <string name="app_name">Ordenamiento</string>
    <string name="array_size">Ingresar tamaño del vector</string>
    <string name="submit">Enviar</string>
    <string name="maximum">Valor máximo 9,999</string>
    <string name="enter_value">Ingrese un valor</string>

    <string name="quick">Quick</string>
    <string name="merge">Merge</string>
    <string name="shell">Shell</string>
    <string name="heap">Heap</string>
    <string name="bucket">Bucket</string>

</resources>
