<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.johnmcarmona.ordenamiento.OrdenarActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btnQuick"
            android:layout_gravity="center_vertical"
            android:text="@string/quick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/merge"
            android:id="@+id/btnMerge"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/shell"
            android:id="@+id/btnShell"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/heap"
            android:id="@+id/btnHeap"
            android:layout_gravity="center_vertical" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/bucket"
            android:id="@+id/btnBucket"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtQuick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMerge"
        android:layout_below="@+id/txtQuick"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtShell"
        android:layout_below="@+id/txtMerge"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtHeap"
        android:layout_below="@+id/txtShell"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBucket"
        android:layout_below="@+id/txtHeap"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
